--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,14 @@ header div.menu{
 
 
 header div.menu li:hover{
-    bottom:0;
+
     border-bottom: 3px solid #fff ;
     padding-bottom: 20px;
+}
+
+header div.menu li:active {
+    opacity: 0.6;
+
 }
 
 
@@ -97,13 +102,13 @@ a {
 
 .banner {
     background: url("photo.jpg") no-repeat center;
-    background-size: contain;
-    height: 330px;
+    background-size: cover;
+    max-height: 100%;
     clear: both;
 
 }
 .banner .container {
-    height: 100%;
+    height: 330px;
     position: relative;
 }
 
@@ -122,7 +127,6 @@ div.motto h1{
     width: 50%;
     opacity: 0.9;
     color:#8d8e8e;
-
 }
 
 div.motto h2{
@@ -298,4 +302,14 @@ p#date{
 .info-content-left{
     float:left;
     width:50%;
+}
+
+#map-pin{
+    position: absolute;
+    top:70%;
+    left:40%;
+}
+
+#menu-burger{
+    display: none;
 }
